# serverless-game

./: .dockerignore  .env.local  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  s_thing.py  serverless.yml  tox.ini
.claude/commands/: design.md  merge.md  play.md
.github/workflows/: ci.yml  codeql-analysis.yml
aspects/: eventLogger.py  handler.py  land.py  landCreator.py  location.py  thing.py
aspects/tests/: test_land.py  test_location.py  test_thing.py
backend/: .flake8  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yml
backend/aspects/: __init__.py  auth.py  aws_client.py  communication.py  decorators.py  description_generator.py  equipment.py  eventLogger.py  handler.py  identity.py  inventory.py  land.py  landCreator.py  location.py  npc.py  player.py  suggestion.py  thing.py  thing_websocket_patch.py  weather.py  websocket_handlers.py
backend/aspects/tests/: __init__.py  conftest.py  test_communication.py  test_description_generator.py  test_equipment.py  test_help.py  test_identity.py  test_inventory.py  test_land.py  test_location.py  test_suggestion.py  test_thing.py  test_weather.py  test_worldgen.py
backend/aspects/worldgen/: __init__.py  base.py  biome.py  describe.py  dungeon.py  landmarks.py  overworld.py
backend/test_data/: landCreator.json
backend/test_venv/: pyvenv.cfg
docs/: AUTH_DESIGN.md  DESIGN_CONTEXT.md  EMAIL_DESIGN.md  FIREBASE_MANUAL_SETUP.md  GAME_DESIGN.md  IMPLEMENTATION_CHECK.md  README.md  REQUIREMENTS.md  requirements.md
frontend/: .env.example  index.html  package-lock.json  package.json  serverless.yml  vite.config.js
infra/: README.md  serverless.yml
loc/: README.md  handler.py  location.py  overground.py  serverless.yml
mixins/: handler.py  landCreator.py  location.py  thing.py
mob/: handler.py  mob.py
scripts/: ai_agent.py  explore_session.py  local-runner.py  local-server.py  local-setup.sh  local-teardown.sh  local-test.sh  localstack-init.sh  play_demo.py
test_ci_venv/: pyvenv.cfg
test_data/: landCreator.json
thing/: handler.py  thing.py
(+50 files in other folders)
